Fix up package names

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'eclipse'
 
+version='1.0'
+
 configurations {
     source {
         extendsFrom archives
