--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'eclipse'
 
-version='1.0-rc1'
+version='1.0-rc2'
 
 configurations {
     source {
@@ -53,6 +53,6 @@ uploadArchives {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '0.9-rc-3'
+    gradleVersion = '0.9.2'
 }
 
