--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ uploadArchives {
         add project.repositories.localIvyRepository
     }
 }
+group = 'gradle-plugins'
 
 task wrapper(type: Wrapper) {
     gradleVersion = '0.9.2'
