--- a/ivy/gradle_cobertura/gradle_cobertura/1.0-rc4/coberturainit.gradle
+++ b/ivy/gradle_cobertura/gradle_cobertura/1.0-rc4/coberturainit.gradle
@@ -2,23 +2,22 @@ buildscript {
 
     def pathParts = sourceURI.path.split('/')
     def version = pathParts[-2]
-    def basePath = pathParts[0..(pathParts.size()-2)].join('/')
+    def basePath = pathParts[0..(pathParts.size()-6)].join('/')
     if (sourceURI.scheme != 'file') {
         def uri = new java.net.URI(sourceURI.scheme, sourceURI.userInfo, sourceURI.host, sourceURI.port, basePath, null, null)
         basePath = "${uri.toString()}"
     }
-    println basePath
 
     repositories {
         mavenCentral()
         add(new org.apache.ivy.plugins.resolver.URLResolver()) {
             name = 'cobertura'
-            addArtifactPattern 'https://github.com/valkolovos/gradle_cobertura/raw/master/ivy/[organization]/[module]/[revision]/[artifact]-[revision].[ext]'
-            addIvyPattern 'https://github.com/valkolovos/gradle_cobertura/raw/master/ivy/[organization]/[module]/[revision]/ivy.xml'
+            addArtifactPattern "${basePath}/[organization]/[module]/[revision]/[artifact]-[revision].[ext]"
+            addIvyPattern "${basePath}/[organization]/[module]/[revision]/ivy.xml'
         }
     }
     dependencies {
-        classpath 'gradle_cobertura:gradle_cobertura:1.0-rc4'
+        classpath "gradle_cobertura:gradle_cobertura:${version}"
     }
 }
 
