--- a/ivy/gradle_cobertura/gradle_cobertura/1.0-rc4/coberturainit.gradle
+++ b/ivy/gradle_cobertura/gradle_cobertura/1.0-rc4/coberturainit.gradle
@@ -1,24 +1,28 @@
-buildscript {
+import org.gradle.api.internal.GradleInternal
+import org.gradle.api.internal.project.ProjectInternal
 
+buildscript {
     def pathParts = sourceURI.path.split('/')
     def version = pathParts[-2]
-    def basePath = pathParts[0..(pathParts.size()-6)].join('/')
+    def basePath = pathParts[0..(pathParts.size()-5)].join('/')
     if (sourceURI.scheme != 'file') {
         def uri = new java.net.URI(sourceURI.scheme, sourceURI.userInfo, sourceURI.host, sourceURI.port, basePath, null, null)
         basePath = "${uri.toString()}"
     }
+    println basePath
 
     repositories {
         mavenCentral()
         add(new org.apache.ivy.plugins.resolver.URLResolver()) {
             name = 'cobertura'
             addArtifactPattern "${basePath}/[organization]/[module]/[revision]/[artifact]-[revision].[ext]"
-            addIvyPattern "${basePath}/[organization]/[module]/[revision]/ivy.xml'
+            println "${basePath}/[organization]/[module]/[revision]/[artifact]-[revision].[ext]"
+            addIvyPattern "${basePath}/[organization]/[module]/[revision]/ivy.xml"
         }
     }
     dependencies {
         classpath "gradle_cobertura:gradle_cobertura:${version}"
     }
 }
-
+apply plugin: com.orbitz.gradle.cobertura.CoberturaPlugin
 
