--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
 
-version='1.0-rc5'
+version='1.0'
 group = 'gradle_cobertura'
 
 configurations {
