Upgrade the gradle wrapper to use gradle 1.0-milestone9.

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ configurations {
     }
 }
 
+task createWrapper(type: Wrapper) {
+    gradleVersion = '1.0-milestone-9'
+}
+
 repositories {
     mavenCentral()
 }
