Refactoring the Cobertura plugin so that it only runs instrumentation once, and runs cobertura reports once at the end regardless of whether or not tests failed. Trying to get instrumentation to only run when needed

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ test-output
 .settings
 bin
 gradle-app.setting
+*.iml
+*.iws
+*.ipr
+testclient/gradlew
+testclient/gradlew.bat
+testclient/gradle/wrapper/*
