--- a/src/main/resources/META-INF/gradle-plugins/cobertura.properties
+++ b/src/main/resources/META-INF/gradle-plugins/cobertura.properties
@@ -1,1 +1,1 @@
-implementation-class=com.orbitz.gradle.cobertura.CoberturaPlugin
+implementation-class=net.saliman.gradle.plugin.cobertura.CoberturaPlugin
