Added support for multiple report formats (Thank you aartiPI)

--- a/testclient/calculator/build.gradle
+++ b/testclient/calculator/build.gradle
@@ -13,6 +13,10 @@ dependencies {
 	testCompile "junit:junit:4.10"
 }
 
+cobertura {
+  coverageFormats = [ 'xml','html' ]
+}
+
 test {
 	include '**/*Add*'
 	doFirst {
