Added a class to the test client to test exclusions and updated the README.md file

--- a/testclient/calculator/build.gradle
+++ b/testclient/calculator/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
 cobertura {
   coverageFormats = [ 'xml','html' ]
+  coverageExcludes = [ '.*net.saliman.gradle.plugin.cobertura.testclient.dao.*' ]
 }
 
 test {
