--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ targetCompatibility = '1.5'
 
 group = "net.saliman"
 archivesBaseName = "gradle-cobertura-plugin"
-version = "1.1.2"
+version = "1.2.0-SNAPSHOT"
 ext.isSnapshot = version.endsWith("SNAPSHOT")
 
 if ( isSnapshot ) {
@@ -34,9 +34,9 @@ repositories {
 }
 
 dependencies {
-	groovy localGroovy()
+	compile 'org.codehaus.groovy:groovy-all:2.0.6'
 	compile gradleApi()
-	compile 'net.sourceforge.cobertura:cobertura:1.9.4.1'
+	compile 'net.sourceforge.cobertura:cobertura:2.0.3-SNAPSHOT'
 	testCompile 'junit:junit:4.10'
 	archives "org.apache.maven.wagon:wagon-ssh:2.2"
 	archives "org.apache.maven.wagon:wagon-ssh-external:2.2"
@@ -67,7 +67,7 @@ artifacts {
 
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '1.3'
+	gradleVersion = '1.5'
 }
 
 signing {
