Enhanced the plugin so that it only instruments when source code changes, or input properties change

--- a/testclient/calculator/build.gradle
+++ b/testclient/calculator/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 cobertura {
   coverageFormats = [ 'xml', 'html' ]
   coverageExcludes = [ '.*net.saliman.gradle.plugin.cobertura.testclient.dao.*' ]
+  // coverageIncludes = [ '.*net.saliman.gradle.plugin.cobertura.testclient.dao.*' ]
   coverageIgnoreTrivial = true;
   coverageIgnoreMethodAnnotations = [ 'net.saliman.gradle.plugin.cobertura.testclient.calculator.CoverageIgnore' ]
 }
