--- a/testclient/build.gradle
+++ b/testclient/build.gradle
@@ -14,9 +14,9 @@ subprojects {
   apply plugin: 'java'
 }
 
-apply plugin: 'cobertura'
+apply plugin: 'net.saliman.cobertura'
 cobertura {
-  coberturaVersion = '2.1.0-SNAPSHOT'
+  // coberturaVersion = '2.1.0-SNAPSHOT'
 
   coverageMergeDatafiles = [
     new File("util/build/cobertura/cobertura.ser"),
