--- a/build.gradle
+++ b/build.gradle
@@ -189,18 +189,20 @@ bintray {
 	configurations = [ 'archives' ]
 
 	pkg {
-		repo = 'gradle-plugins'
+		// repo = 'gradle-plugins'
+		repo = 'maven'
 		name = 'gradle-cobertura-plugin'
 		licenses = [ 'Apache-2.0' ]
-		desc = 'A Gradle plugin for programmatically managing Jenkins instances.'
+		desc = 'A Gradle plugin for working with the Cobertura code coverage tool.'
 		websiteUrl = 'https://github.com/stevesaliman/gradle-cobertura-plugin'
 		issueTrackerUrl = 'https://github.com/stevesaliman/gradle-cobertura-plugin/issues'
 		vcsUrl = 'https://github.com/stevesaliman/gradle-cobertura-plugin.git'
 		labels = [ 'cobertura', 'coverage' ]
 		publicDownloadNumbers = true
 		version {
-			name = version
-			vcsTag = version
+			// name = version
+			// vcsTag = version
+			vcsTag = "Release_${version}"
 			attributes = [
 							'gradle-plugin': 'net.saliman.cobertura:net.saliman:gradle-cobertura-plugin'
 			]
